Fix Collapsing Div Bug on Related Stories

--- a/_scss/bbg/_buttons.scss
+++ b/_scss/bbg/_buttons.scss
@@ -1,5 +1,11 @@
-a {text-decoration: none;}
+// a:link, a:visited {
+// 	color: $blue;
+// 	text-decoration: none;
+// }
+// a:hover, a:active {color: $red;}
 
-#hb-side-navigation.hb-non-transparent {
 
+
+.profile_link {
+	color: inherit;
 }
